# hello-world.dev

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  INTEGRATION_SUMMARY.md  PYRIGHT_FIXES.md  README.md  TEAM_COMPARISON.md  WORKSTREAMS.md  check_team.sh  main.py  monitor_teams.sh  pyproject.toml  pyrightconfig.json  team_summary.sh
.claude/commands/: clean.md  dispatch.md  plan.md  prime.md
conversation_system/: README.md  setup.py
conversation_system/cli/: main.py
conversation_system/config/: settings.py
conversation_system/metrics/: collector.py
conversation_system/providers/: __init__.py
conversation_system/providers/ai/: base.py
conversation_system/providers/tts/: base.py  elevenlabs.py
conversation_system/state/: session_manager.py
conversation_system/utils/: interruption_handler.py  logging.py
hello_world/: README.md  __init__.py  setup.py
hello_world/cli/: ai.py  main.py  test_cli.py  test_main.py  test_stt.py  test_tts.py  tts_utility.py
hello_world/config/: settings.py
hello_world/core/: conversation_manager.py
hello_world/metrics/: __init__.py  collector.py
hello_world/providers/: __init__.py  registry.py
hello_world/providers/ai/: __init__.py  base.py  claude.py  gemini.py
hello_world/providers/stt/: __init__.py  base.py  whisperkit.py  whisperkit_file.py
hello_world/providers/tts/: __init__.py  base.py  elevenlabs.py
hello_world/state/: session_manager.py
hello_world/tests/: test_ai_cli.py  test_ai_providers.py  test_integration.py  test_state_metrics.py  test_stt_cli.py  test_stt_file_provider.py  test_stt_sounddevice.py  test_test_cli.py  test_tts.py  test_tts_utility.py
hello_world/utils/: interruption_handler.py  logging.py
mocks/: __init__.py  providers.py
specs/: 2025_06_07_conversation_system.md  2025_06_08_developer_testing_utilities.md  2025_06_08_plugin_configuration_system.md  2025_06_08_silero_vad_migration.md
worktrees/team-1a-audio-pyaudio/: test_audio_pipeline.py
worktrees/team-1a-audio-pyaudio/hello_world/: __init__.py
(+6 files in other folders)
