[project]
name = "conversation-system"
version = "1.0.0"
description = "Natural voice interactions with AI models using WhisperKit, Claude/Gemini, and ElevenLabs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=2.3.0",
    "python-dotenv>=1.1.0",
    "ruff-lsp>=0.0.62",
    "pygame>=2.5.0",
    "google-generativeai>=0.3.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "setuptools>=68.0.0",  # Required for pkg_resources
]

[project.scripts]
conversation = "hello_world.cli.main:cli"
conversation-test = "hello_world.cli.test_cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hello_world*"]
